# dashboard-peugeot-106

./: .gitignore  GUItest.py  README.MD  dimensions.md  main.py  mainGUI.py  mpu6050_calibration.txt  requirements.txt  settings.txt  setup.py
GUI/: CMakeLists.txt  main.qml
GUI/AccelerationView/: AccelerationView.qml
GUI/DataView/: DataView.qml  TemperatureAndHumidityGauge.qml
GUI/GPSView/: BottomBar.qml  CircleWindow.qml  TopBar.qml
dashboardGUI/: .gitignore  CMakeLists.txt  READMe.txt  main.qml  mainGUI.py  mainPY.qml
dashboardGUI/AccelerationView/: AccelerationView.qml
dashboardGUI/DataView/: DataView.qml  TemperatureAndHumidityGauge.qml
dashboardGUI/GPSView/: TopBar.qml
lib/: .gitignore
lib/3dModel/: Peugeot106.blend  Peugeot106Final.blend  carPlayFolder.blend  carPlayFolder.blend1  foldingScreen.blend  foldingScreen.blend1  radioHolder.blend  radioHolder.blend1  radioHolder.stl  radioHolder0712.stl  radioHolderFinal.blend  radioHolderFinal.blend1  radioHolderV11101.stl  radioHolderV2.blend  radioHolderV2.blend1  radioHolderV2_1101.blend  radioHolderV2_1101.blend1  screenHolder.blend  screenHolder.blend1  screenHolderFinal.blend  screenHolderFinal.blend1  screenholder.stl  screenholder0212.stl  screenholder0512.stl  screenholder0712.stl
lib/peugeot 106 emblem/: Peugeot  black Logo Vector.ai
src/: DebuggingView.py  gitUpdater.py
src/dashboardGUI/: CMakeLists.txt  main.qml
src/dashboardGUI/AccelerationView/: AccelerationView.qml
src/dashboardGUI/ClockView/: ClockView.qml
src/dashboardGUI/DataView/: TemperatureAndHumidityGauge.qml
src/dashboardGUI/GPSView/: BottomBar.qml  CircleWindow.qml  TopBar.qml
src/dashboardGUI/TechnometerView/: TechnometerView.qml
src/dashboardGUI/TechnometerViewClassic/: TechnometerViewClassic.qml
src/dashboardGUI/TechnometerViewModern/: TechnometerViewModern.qml
src/displays/: GPSDisplay.py  accelerationDisplay.py  clockDisplay.py  lightDisplay.py  temperatureDisplay.py  velocityDisplay.py
src/sensors/: ButtonHandler.py  DHT11.py  LDRLM393.py  MPU6050.py  NEO6M.py  PiButton.py  RPMreader.py  VK162GPS.py
